Unnecessary and incorrect invalidation about composited fixed-position layers https://bugs.webkit.org/show_bug.cgi?id=75638

When a FrameView scrolls, composited fixed-position layers should
not contribute to the invalidation rect of the root layer.

Reviewed by Simon Fraser.

No new tests. Haven't found a good way to test this programatically.

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsFastPath):


Canonical link: https://commits.webkit.org/95173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107270 268f45cc-cd09-0410-ab3c-d52691b4dbfc